--- a/app/scss/util/fonts.scss
+++ b/app/scss/util/fonts.scss
@@ -6,3 +6,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@700&display=swap');
 // Bitter (700 font-weight)
+
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap');
+// Merriweather (700 font-weight)
