--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -99,10 +99,11 @@ header{
       display: inline-flex;
       gap: 15px;
       justify-content: space-between;
-      li{
+      a{
         font-family: "Roboto";
         font-weight: 400;
-        font-size: 20px;
+        font-size: 25px;
+        color: #000;
       }
     }
     a{
