Main page has been adapted to 1024px width

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -84,7 +84,7 @@ header{
     }
     ul{
       display: inline-flex;
-      gap: 15px;
+      gap: clamp(5px, 10px, 15px);
       justify-content: space-between;
       a{
         font-family: "Roboto";
