Main page has been adapted to 600px width

--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -64,9 +64,9 @@ main{
         border-top: 1px solid var(--grey);
       }
     }
-    // #top-stories__ul-first{
-    //   display: none;
-    // }
+    #top-stories__ul-first{
+      display: none;
+    }
   }
 
   .quick-bites{
